NOGH: Proof-of-concept for combined coverage reporting.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "grunt-contrib-concat": "2.1.0",
         "grunt-contrib-uglify": "5.2.2",
         "node-jqunit": "1.1.9",
+        "nyc": "15.1.0",
         "sheep-benchmark": "colinbdclark/sheep.js",
         "testem": "3.10.1"
     },
@@ -36,9 +37,9 @@
         "prepare": "npx grunt",
         "browser-core-test": "npx testem ci --file tests/testem.js",
         "webaudio-test": "npx testem ci --file tests/testem-webaudio.js",
-        "node-test": "node tests/node-all-tests.js",
-	"pretest": "npx rimraf reports instrumented",
+        "node-test": "node node_modules/.bin/nyc --temp-directory coverage --reporter none node tests/node-all-tests.js",
+        "pretest": "npx rimraf reports instrumented",
         "test": "npm run node-test && npm run webaudio-test && npm run browser-core-test",
-	"posttest": "npx nyc report --temp-directory coverage --reporter text-summary --reporter html"
+        "posttest": "node node_modules/.bin/nyc report --temp-directory coverage --reporter text-summary --reporter html"
     }
 }
